# 20251017-matsuzawa

./: pyproject.toml
.github/workflows/: run_experiment_with_open_code.yml  run_trial_experiment_with_open_code.yml
.research/iteration1/: config.yaml  optuna_study.db  stderr.txt  stdout.txt
.research/iteration1/wandb_data/: improvement.json  summary.json
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/judge_execution_subgraph/: judge_execution.txt
config/: config.yaml
config/run/: comparative-1-DistilBERT-base-66M-CIFAR-10.yaml  comparative-1-DistilBERT-base-66M-alpaca-cleaned.yaml  proposed-DistilBERT-base-66M-CIFAR-10.yaml  proposed-DistilBERT-base-66M-alpaca-cleaned.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
