[project]
name = "distilbert-adapter-exp"
version = "0.1.0"
description = "DistilBERT adapter experiments with Hydra & WandB"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "torchvision>=0.15.0",
    "hydra-core>=1.3.2",
    "wandb>=0.15.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "optuna>=3.3.0",
    "pandas>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
